made riptide chapter flow and reformatted figures | still needs conclusion

--- a/1_intro.tex
+++ b/1_intro.tex
@@ -134,7 +134,8 @@ eliminating inessential inefficiencies like instruction supply, RF access, and p
 % 
 The downsides of specialization are its high non-recurring engineering cost and its inability to support a wide range of applications.
 % 
-Given the emerging nature of applications in the ULP domain, specialization is premature.
+Given the emerging nature of applications (e.g., due to
+new machine learning algorithms~\cite{jouppi2021ten}) in the ULP domain, specialization is premature.
 % 
 New architecture must be highly programmable, while at the same time being  extremely energy-efficient. 
 % High programmability, like extreme energy-efficiency, is a requirement for new architectures.
