--- a/riptide/3_overview.tex
+++ b/riptide/3_overview.tex
@@ -22,7 +22,7 @@ by 25\% / 17\% v.\ prior
 energy-minimal CGRAs~\cite{snafu} and by 6.6$\times$ / 6.2$\times$
 v.\ a ULP scalar core.
 
-% \paragraph{\riptide's control-flow paradigm minimizes energy.}
+% \paragraph{\riptide's control-flow paradigm minimizes energy}
 % \riptide introduces a new control-flow paradigm, discussed in \autoref{riptide:cf}, that supports arbitrary programs without expensive tag-token matching hardware.
 % 
 % Specifically, \riptide adopts a steering ($\phi^{-1}$) control-flow model, which minimizes energy by gating disabled paths so that values are only sent where they will be actually used.
@@ -32,7 +32,7 @@ v.\ a ULP scalar core.
 % 
 %% The carry gate maintains order between and across loop nests (eliminating the need to tag values) without eliminating the parallelism important to performance.
 
-% \paragraph{\riptidecomp compiles arbitrary C-code to energy-minimal and performant CGRA configurations.}
+% \paragraph{\riptidecomp compiles arbitrary C-code to energy-minimal and performant CGRA configurations}
 %
 % \riptide's compiler (\autoref{riptide:compiler}) leverages LLVM~\cite{llvm} and several
 % custom compiler passes to convert arbitrary programs to dataflow
@@ -55,7 +55,7 @@ v.\ a ULP scalar core.
 %% % 
 %% By building \snafu's framework, \riptideframe maintains ULP, energy-minimal operation, while supporting arbitrary programs.
 
-% \paragraph{\riptide's CGRA microarchitecture minimizes switching activity.}
+% \paragraph{\riptide's CGRA microarchitecture minimizes switching activity}
 %
 % \riptide's CGRA microarchitecture prioritizes energy efficiency above all other metrics.
 %
@@ -66,7 +66,7 @@ v.\ a ULP scalar core.
 % tagless dataflow firing,
 % and statically routing values in a bufferless NoC.
 
-% \paragraph{Offloading control flow to the NoC enables complex programs on small CGRA fabrics with negligible hardware overhead.}
+% \paragraph{Offloading control flow to the NoC enables complex programs on small CGRA fabrics with negligible hardware overhead}
 % \riptidearch supports control-flow operations directly in the NoC by reusing existing NoC hardware.
 % 
 % Control-flow operations are simple, but numerous.
