--- a/riptide/2_background.tex
+++ b/riptide/2_background.tex
@@ -111,7 +111,7 @@ PEs communicate them via on-chip network (NoC).
 % components of a processor pipeline~\cite{dyser,dynaspam,chimera}
 % or memory hierarchy~\cite{livia,oskin:isca98:active-pages,schwedock:isca22:tako}.
 
-\paragraph{CGRA applicability limits efficiency.}
+\paragraph{CGRA applicability limits efficiency}
 Hence, to minimize energy, one would ideally run an entire program on the CGRA.
 %
 Two considerations prevent this.
@@ -191,7 +191,7 @@ Despite this added support, these designs are still limited to a subset of commo
 % % 
 % However, these benefits are limited to programs with singly-nested loops and are uneven --- across a small set of benchmarks UE-CGRAs are $0.8-1.5\times$ as energy-efficient as an in-order scalar core.
 
-\paragraph{Relevance to \riptide: Energy is our goal, not performance.}
+\paragraph{Relevance to \riptide: Energy is our goal, not performance}
 %
 \riptide is designed to \emph{minimize energy}.
 %
@@ -254,7 +254,7 @@ These performance-oriented designs require expensive microarchitectural mechanis
 to maintain performance with highly variable memory latency
 (e.g., associative tag matching due to operand re-ordering, or large on-chip buffers to hide latency with memory-level parallelism).
 
-\paragraph{Relevance to \riptide: Balancing generality and efficiency.}
+\paragraph{Relevance to \riptide: Balancing generality and efficiency}
 %
 \riptide also targets arbitrary code written in high-level languages.
 %
@@ -300,7 +300,7 @@ There are many dimensions of CGRA architecture that affect energy efficiency, th
 % \paragraph{Dataflow paradigm}
 % Ordered, tagged, systolic - space + space \& time
 
-\paragraph{Programming interface.}
+\paragraph{Programming interface}
 CGRAs can be programmed in many different ways.
 % 
 Some~\cite{snafu,dally:ieee08:elm} expose low-level interfaces that require expert knowledge.
@@ -314,7 +314,7 @@ compiling from languages originally developed for CPUs.
 \riptide takes this approach to maximize programmability.
 We choose to compile from C because C is popular in embedded applications.
 
-\paragraph{PE type(s).}
+\paragraph{PE type(s)}
 CGRAs offer a wide range of design choices, including PE
 operation set, PE complexity, and NoC.
 %
@@ -334,7 +334,7 @@ as specialized PEs that support only control operations.
 %%   - mapping is hard
 %%     - esp. if latency is variable
 %%     - esp. if tons of control ops are added
-\paragraph{Mapping is hard.}
+\paragraph{Mapping is hard}
 Like hardware synthesis, a CGRA compiler must find a layout of
 operations that fits within fabric resources with valid routes between
 all producers and consumers.
@@ -362,7 +362,7 @@ greatly simplifying mapping.
 
 
 
-\paragraph{CGRA memory-ordering model.}
+\paragraph{CGRA memory-ordering model}
 
 A CGRA design must ensure correct memory-operation ordering.
 %
@@ -403,7 +403,7 @@ in \riptide's execution model.
 %% files, instead moving operands directly from a
 %% producer PE to consumer PEs.
 
-%% \paragraph{CGRA design space.}
+%% \paragraph{CGRA design space}
 %% A wide variety of CGRA architectures target different domains.
 %% %
 %% CGRAs exist as standalone cores~\cite{trips,raw,swanson2003wavescalar,mishra2006tartan},
@@ -422,7 +422,7 @@ in \riptide's execution model.
 %% PEs may be homogeneous or heterogeneous; the latter is more area- and
 %% energy-efficient, but creates a combinatorially large design space~\cite{revamp}.
 
-%% \paragraph{Scheduling operations.}
+%% \paragraph{Scheduling operations}
 %% For regular applications, a compiler can statically time and route operations in a fabric
 %% often called a \emph{systolic array}.
 %% %
@@ -449,7 +449,7 @@ in \riptide's execution model.
 %% %which is significantly more flexible, allowing more code to be run on the CGRA. 
 %% %
 
-%% \paragraph{Performance v.\ energy.}
+%% \paragraph{Performance v.\ energy}
 %% Like nearly all processors,
 %% prior CGRAs primarily \emph{maximize performance} under
 %% an area or power budget.
@@ -487,7 +487,7 @@ in \riptide's execution model.
 %% %% and comes within $3\times$ of equivalent ASICs.
 
 %% \subsection{Challenge: Compiling to CGRA}
-%% % \paragraph{CGRA compilation.}
+%% % \paragraph{CGRA compilation}
 %% %
 %% Compiling to a CGRA is challenging.
 %% %
@@ -558,7 +558,7 @@ in \riptide's execution model.
 %% \snafu uses predication and consequently supports only simple, affine loops
 %% (disallowing back-edges).
 
-%% %\paragraph{Selection ($\phi$) burns energy on paths not taken.}
+%% %\paragraph{Selection ($\phi$) burns energy on paths not taken}
 %% %% Selection is another control-flow paradigm not suitable to the ULP domain.
 %% % 
 %% Selection ($\phi$) fully executes both sides of a branch, choosing one side's
