--- a/riptide/7_fin.tex
+++ b/riptide/7_fin.tex
@@ -32,7 +32,7 @@ manipulates inputs to the data switch to select which data is sent.
 
 %% \figRipTideFilter
 
-%% \paragraph{Sketch of the CF module.}
+%% \paragraph{Sketch of the CF module}
 %% %
 %% The CF module (\autoref{fig:riptide:filter}) takes three inputs: {\tt A}, {\tt B}, and decider {\tt D} from the switch and produces {\tt out}.
 %% %
@@ -40,7 +40,7 @@ manipulates inputs to the data switch to select which data is sent.
 %% % 
 %% The actual implementation of the CF module reuses existing switch hardware so does not directly interact with data values {\tt A} and {\tt B}, but the simple mental model does capture the high-level operation.\nzb{Huh?}
 
-\paragraph{Control-flow module.}
+\paragraph{Control-flow module}
 %
 The CFM takes eight inputs and produces five outputs that control router
 configuration and dataflow through the network.
@@ -116,7 +116,7 @@ forever:
   \label{lst:fin}
 \end{figure}
 
-\paragraph{Supported operations.}
+\paragraph{Supported operations}
 The CFM can be configured for routing or for the control operators in
 \autoref{riptide:cf}.
 %
@@ -153,7 +153,7 @@ it forwards {\tt B} until it sees a false {\tt D} token.
 %
 See the pseudocode in \autoref{lst:fin:carry} for details.
 
-\paragraph{Control flow in the NoC adds small hardware overheads.}
+\paragraph{Control flow in the NoC adds small hardware overheads}
 %
 Implementing control flow in the NoC is far more energy- and
 area- efficient than in a PE, saving an estimated 40\% energy and 22\% area v. CGRA with all CF operations mapped to PEs (All PEs in~\autoref{fig:riptide:eval:fin}).
@@ -237,7 +237,7 @@ software-supplied value that is not -1, 0, or 1, it currently requires \textmu c
 %% % 
 %% Merge is used for synchronization so the outgoing data does not matter, just the outgoing valid signal.
 
-\paragraph{Buffering of decider values.}
+\paragraph{Buffering of decider values}
 The CFM provides a small amount of buffering for decider values.
 % 
 This is because loop deciders often have high fanout, which means that the next iteration of a loop is likely blocked by one or more downstream consumers.
