--- a/riptide/8_method.tex
+++ b/riptide/8_method.tex
@@ -5,7 +5,7 @@ We evaluate a complete \riptide system: the compiler built using LLVM and the
 microarchitecture fully implemented in RTL in Intel 22FFL,
 an industrial, sub-28nm FinFET process.
 
-\paragraph{Compiler.}
+\paragraph{Compiler}
 \riptide's compiler passes extend LLVM 12.0~\cite{llvm} and we compile workloads with
 \texttt{-Oz} to optimize code size.  
 % 
@@ -18,7 +18,7 @@ The ILP mapper uses CVXPY~\cite{cvxpy} and Gurobi 9.5~\cite{gurobi}.
 %
 The SAT mapper uses CaDiCal~\cite{cadical} to rewrite and simplify the problem's clauses and then uses a new parallel SAT solver, developed concurrently and based on YalSAT~\cite{yalsat}, to find a valid mapping.
 
-\paragraph{Hardware.}
+\paragraph{Hardware}
 \label{method:hardware}
 \riptide is implemented completely in RTL, including the 6$\times$6 CGRA, RISC-V
 (RV32EMC) scalar core, and 256KB
@@ -34,7 +34,7 @@ high-threshold-voltage, FinFET PDK with compiled memories.
 To estimate power, we simulate full benchmarks post-synthesis and use Cadence
 Joules to estimate power from annotated switching activities.
 
-\paragraph{Baselines.}
+\paragraph{Baselines}
 The evaluation compares to several baselines---scalar, vector, \snafu, and
 three ASICs---also implemented entirely in RTL, using the same design
 flow.
@@ -52,7 +52,7 @@ The vector baseline adds a single-lane co-processor~\cite{manic}.
 %% We compare to three custom ASICs on {\tt dmm}, {\tt sort}, and {\tt fft} to evaluate the costs of
 %% programmability in \riptide.
 
-\paragraph{Benchmarks.}
+\paragraph{Benchmarks}
 We evaluate ten workloads important to the ULP domain on random inputs.
 % 
 For the vector baseline, we vectorized all code by hand (except {\tt dfs}, which does not 
