--- a/riptide/floats.tex
+++ b/riptide/floats.tex
@@ -119,7 +119,7 @@
 \newcommand{\figRipTideCompiler}{
 \begin{figure*}[t]
 	\centering
-	\includegraphics[width=0.75\linewidth]{riptide/figures/pdf/compiler.pdf}
+	\includegraphics[width=\linewidth]{riptide/figures/pdf/compiler.pdf}
 	\caption{\riptide's frontend and middle-end components. The frontend
     compiles C code to LLVM-IR using \texttt{clang}. The middle-end
     produces an optimized dataflow graph (DFG) that enforces memory ordering
@@ -395,7 +395,7 @@
 }
 
 \newcommand{\figRipTideISA}{
-\begin{table}[t]
+\begin{table}[b]
 			\centering
       \resizebox{\linewidth}{!}{%
       \begin{tabular}{lccl}
@@ -436,8 +436,35 @@
 \end{figure*}
 }
 
-\newcommand{\figRipTideArch}{
+\newcommand{\figRipTideArchTop}{
 \begin{figure*}[t]
+	\centering
+	\includegraphics[height=2.5in]{riptide/figures/pdf/block.pdf}
+	\caption{\riptide's ULP CGRA fabric.}
+	\label{fig:riptide:arch:block}
+\end{figure*}
+}
+
+\newcommand{\figRipTideArchPE}{
+\begin{figure*}[htb]
+	\centering
+	\includegraphics[height=2.5in]{riptide/figures/pdf/pe.pdf}
+	\caption{PE microarchitecture}
+	\label{fig:riptide:arch:pe}
+\end{figure*}
+}
+
+\newcommand{\figRipTideArchRouter}{
+\begin{figure*}[htb]
+	\centering
+	\includegraphics[height=2.5in]{riptide/figures/pdf/router.pdf}
+	\caption{Router microarchitecture}
+	\label{fig:riptide:arch:router}
+\end{figure*}
+}
+
+\newcommand{\figRipTideArch}{
+\begin{figure*}[htb]
 	\centering
 	\begin{minipage}{\linewidth}
 		\centering
@@ -489,6 +516,24 @@
 \end{figure*}
 }
 
+\newcommand{\figRipTideArchPERouter}{
+\begin{figure*}[t]
+	\centering	
+	\begin{minipage}{0.49\linewidth}
+		\centering
+		\includegraphics[height=2.5in]{riptide/figures/pdf/pe.pdf}
+		\caption{PE microarchitecture}
+		\label{fig:riptide:arch:pe}
+	\end{minipage}
+	\begin{minipage}{0.49\linewidth}
+		\centering
+		\includegraphics[height=2.5in]{riptide/figures/pdf/router.pdf}
+		\caption{Router microarchitecture}
+		\label{fig:riptide:arch:router}
+	\end{minipage}
+\end{figure*}
+}
+
 \newcommand{\figRipTideFilter}{
 \begin{figure}[htb]
 	\centering
@@ -525,7 +570,7 @@
 }
 
 \newcommand{\figRipTidePrimaryCompilerResults}{
-\begin{figure*}[htb]
+\begin{figure*}[t]
 	\begin{minipage}{\linewidth}
 		\centering
 		\includegraphics[height=0.15in]{riptide/figures/pdf/counts_legend-graph-crop.pdf}
